force-app/main/default/objects/Case/fields/Account_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Account_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Tax Res Functionality</description>
    <label>Account Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>