force-app/main/default/objects/Case/fields/Account_Suspension_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Suspension_Formula__c</fullName>
    <formula>Text(Account.ZP_Company_Suspension_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Suspension Formula</label>
    <type>Text</type>
</CustomField>