force-app/main/default/objects/Case/fields/Accounting_Firm_URL__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Firm URL</label>
    <type>Url</type>
</CustomField>