force-app/main/default/objects/Case/fields/Action_Correction_Needed__c.field-meta.xml
<CustomField>
    <fullName>Action_Correction_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action/Correction Needed</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>