force-app/main/default/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1x1 Coaching with Gusto employee</fullName>
            </value>
            <value>
                <fullName>Changes to Sales Processes</fullName>
            </value>
            <value>
                <fullName>Concession provided</fullName>
            </value>
            <value>
                <fullName>Created or updated an IKB/Wiki</fullName>
            </value>
            <value>
                <fullName>Created or updated customer email macros</fullName>
            </value>
            <value>
                <fullName>Created or updated external-facing Help Center article</fullName>
            </value>
            <value>
                <fullName>Customer account suspended</fullName>
            </value>
            <value>
                <fullName>Feedback Escalated with PE/Team Lead</fullName>
            </value>
            <value>
                <fullName>Feedback sent to EPD</fullName>
            </value>
            <value>
                <fullName>Guardrails/Behavioral</fullName>
            </value>
            <value>
                <fullName>New training implemented on team where error originated</fullName>
            </value>
            <value>
                <fullName>No Action Required/Feedback</fullName>
            </value>
            <value>
                <fullName>Reported to Regulator/Filed SAR/UAR(previously two separate options)</fullName>
            </value>
            <value>
                <fullName>Requested EPD to scope out/roadmap a product change</fullName>
            </value>
            <value>
                <fullName>Requested Marketing to make change to website or collateral</fullName>
            </value>
            <value>
                <fullName>Requires update to Privacy Policy at next refresh</fullName>
            </value>
            <value>
                <fullName>Requires update to the Terms of Service at next refresh</fullName>
            </value>
            <value>
                <fullName>Updated CX Processes</fullName>
            </value>
            <value>
                <fullName>Research in progress Email Alert</fullName>
            </value>
            <value>
                <fullName>Checklist in progress Email Alert</fullName>
            </value>
            <value>
                <fullName>Skip Email Alert</fullName>
            </value>
            <value>
                <fullName>Auto wage correction</fullName>
            </value>
            <value>
                <fullName>Manual wage correction</fullName>
            </value>
            <value>
                <fullName>Update filing requirement (rate/schedule)</fullName>
            </value>
            <value>
                <fullName>Generate W2c</fullName>
            </value>
            <value>
                <fullName>Marked for amendment</fullName>
            </value>
            <value>
                <fullName>External payroll</fullName>
            </value>
            <value>
                <fullName>Mark as ready for refile</fullName>
            </value>
            <value>
                <fullName>Reconciliation payroll</fullName>
            </value>
            <value>
                <fullName>Refund taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>