force-app/main/default/objects/Case/fields/Advising_Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>Advising_Touchpoints__c</fullName>
    <inlineHelpText>Total count of all Tasks of record type Advising Call</inlineHelpText>
    <label>Advising Touchpoints</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>