force-app/main/default/objects/Case/fields/Affect_Filing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Affect_Filing_Payment__c</fullName>
    <description>Payroll Compliance uses</description>
    <label>Affect Filing/Payment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>