force-app/main/default/objects/Case/fields/Agatha_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Agatha_Confidence__c</fullName>
    <label>Agatha Confidence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>