force-app/main/default/objects/Case/fields/Agency_Info_Agatha__c.field-meta.xml
<CustomField>
    <fullName>Agency_Info_Agatha__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Info Agatha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>