force-app/main/default/objects/Case/fields/Agency_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Information</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure the agency you have selected is active.</errorMessage>
        <filterItems>
            <field>Agency_Information__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agency_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>