force-app/main/default/objects/Case/fields/Anticipated_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated Effective Date</label>
    <type>Date</type>
</CustomField>