force-app/main/default/objects/Case/fields/Assigned_by_Play_Mode__c.field-meta.xml
<CustomField>
    <fullName>Assigned_by_Play_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned by Play Mode</label>
    <type>Checkbox</type>
</CustomField>