force-app/main/default/objects/Case/fields/Assigned_Client_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Client_Tax_ID__c</fullName>
    <description>Mapped from Tax Notice -&gt; Assigned Client Tax ID (Agency Assigned)</description>
    <label>Assigned Client Tax ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>