force-app/main/default/objects/Case/fields/Audit_Action__c.field-meta.xml
<CustomField>
    <fullName>Audit_Action__c</fullName>
    <description>Mark what action has been taken on an Audit</description>
    <inlineHelpText>Mark what action has been taken on an Audit</inlineHelpText>
    <label>Audit Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Taken</fullName>
            </value>
            <value>
                <fullName>Pending Action</fullName>
            </value>
            <value>
                <fullName>No Action Necessary</fullName>
            </value>
            <value>
                <fullName>Action Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>