force-app/main/default/objects/Case/fields/Auth__c.field-meta.xml
<CustomField>
    <fullName>Auth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>