force-app/main/default/objects/Case/fields/Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User__c</fullName>
    <description>Check if user is authorized based on Email on ZP User and Contact</description>
    <label>Authorized User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>