force-app/main/default/objects/Case/fields/AuthPath__c.field-meta.xml
<CustomField>
    <fullName>AuthPath__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthPath</label>
    <length>100</length>
    <type>Text</type>
</CustomField>