force-app/main/default/objects/Case/fields/Auto_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Close Date Time</label>
    <type>DateTime</type>
</CustomField>