force-app/main/default/objects/Case/fields/Auto_Indexing_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Indexing_Status__c</fullName>
    <description>This is used for showing the Indexing status after OCR is complete.</description>
    <label>Auto Indexing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially Indexed</fullName>
            </value>
            <value>
                <fullName>Fully Indexed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Failed: Untrained Document</fullName>
            </value>
            <value>
                <fullName>Failed: No Valid Document</fullName>
            </value>
            <value>
                <fullName>Failed: System Issue</fullName>
            </value>
            <value>
                <fullName>Failed: No Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>