force-app/main/default/objects/Case/fields/Auto_Response_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Auto_Response_Email_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Response Email Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>