force-app/main/default/objects/Case/fields/Auto_Solve_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Auto_Solve_Error_Message__c</fullName>
    <description>this will be used for SUI Rate API callout errors from Workato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Solve Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>