force-app/main/default/objects/Case/fields/Automation_Message__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message__c</fullName>
    <label>Automation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>