force-app/main/default/objects/Case/fields/Automation_Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message_Details__c</fullName>
    <description>Automation_Message_Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OCR Message Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>