force-app/main/default/objects/Case/fields/Automation_Message_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message_Follow_Up__c</fullName>
    <description>Automation message for follow up process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Automation Message Follow Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>