force-app/main/default/objects/Case/fields/Baby_Case_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Baby_Case_Identifier__c</fullName>
    <description>To identify OCR integration created Tax Res baby cases</description>
    <label>Baby Case Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>