force-app/main/default/objects/Case/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>