force-app/main/default/objects/Case/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>