force-app/main/default/objects/Case/fields/Benefits_and_Payroll_Care_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Benefits_and_Payroll_Care_Support_Needed__c</fullName>
    <label>Benefits and Payroll Care Support Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>