force-app/main/default/objects/Case/fields/Blocker__c.field-meta.xml
<CustomField>
    <fullName>Blocker__c</fullName>
    <description>Payroll Compliance uses</description>
    <label>Blocker?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sale/Upsell</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>