force-app/main/default/objects/Case/fields/BO_Is_Multi_EIN__c.field-meta.xml
<CustomField>
    <fullName>BO_Is_Multi_EIN__c</fullName>
    <description>Is multi EIN value from the BO associated to this case</description>
    <formula>Benefit_Order__r.Is_Multi_EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BO Is Multi EIN</label>
    <type>Checkbox</type>
</CustomField>