force-app/main/default/objects/Case/fields/BoR_Transfer__c.field-meta.xml
<CustomField>
    <fullName>BoR_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BoR Transfer</label>
    <referenceTo>BoR_Transfer__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>