force-app/main/default/objects/Case/fields/Bulk_Migration__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Migration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Migration</label>
    <referenceTo>Bulk_Migration_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>