force-app/main/default/objects/Case/fields/BYB_Automation_Authorized__c.field-meta.xml
<CustomField>
    <fullName>BYB_Automation_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In order to identify if a particular customer has authorized Gusto to perform HI actions on their behalf with a specific broker.</description>
    <label>BYB Automation Authorized</label>
    <type>Checkbox</type>
</CustomField>