force-app/main/default/objects/Case/fields/Call_End__c.field-meta.xml
<CustomField>
    <fullName>Call_End__c</fullName>
    <description>The time call ended from Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call End</label>
    <type>DateTime</type>
</CustomField>