force-app/main/default/objects/Case/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <formula>HYPERLINK(&quot;https://na1.nice-incontact.com/player/#/cxone-player/acd-contacts/&quot;&amp;  Genesys_Call_Id__c  , &quot;Recording Link&quot;,&quot;_new&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>