force-app/main/default/objects/Case/fields/Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Call_Start__c</fullName>
    <description>The time phone call started from Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start</label>
    <type>DateTime</type>
</CustomField>