force-app/main/default/objects/Case/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callback</label>
    <type>Checkbox</type>
</CustomField>