force-app/main/default/objects/Case/fields/Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Id__c</fullName>
    <formula>Carrier__r.Carrier_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Id</label>
    <type>Text</type>
</CustomField>