force-app/main/default/objects/Case/fields/Case_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Time__c</fullName>
    <formula>IF( OR( VALUE( MID( TEXT( CreatedDate - 420/1440 ), 12, 2 ) ) = 0, VALUE( MID( TEXT( CreatedDate - 420/1440 ), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( CreatedDate - 420/1440 ), 12, 2 ) ) - IF( VALUE( MID( TEXT( CreatedDate - 420/1440 ), 12, 2 ) ) &lt; 12, 0, 12 ) ) )&amp; &quot;:&quot; &amp; MID( TEXT( CreatedDate - 420/1440 ), 15, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT( CreatedDate - 420/1440 ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created Time</label>
    <type>Text</type>
</CustomField>