force-app/main/default/objects/Case/fields/Case_In_Route__c.field-meta.xml
<CustomField>
    <fullName>Case_In_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication of the case being routed by captains.</description>
    <label>Case In Route</label>
    <type>Checkbox</type>
</CustomField>