force-app/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>