force-app/main/default/objects/Case/fields/Case_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Case_Pillar__c</fullName>
    <description>Pillar is determined based on the Persona, Company Size, Type, Specialization &amp; Support Level</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pillar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>