force-app/main/default/objects/Case/fields/Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference__c</fullName>
    <description>Original formula: &quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) &amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(RIGHT(Id,10), &quot;0&quot;, &quot;&quot; ) &amp; &quot;:ref&quot;

10/6. Changed RIGHT( Id, 4) to RIGHT( Id, 5)</description>
    <formula>&quot;ref:!&quot; + LEFT( $Organization.Id, 6) + SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) +&quot;.!&quot;+ LEFT( Id, 4) + SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Id, RIGHT( Id, 5), &quot;&quot;), LEFT( Id, 4), &quot;&quot;), &quot;0&quot;, &quot;&quot;) + RIGHT( Id, 6) + &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reference</label>
    <type>Text</type>
</CustomField>