force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>Contains details about how the case was resolved</description>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Issue Reassigned to Gusto Support</fullName>
            </value>
            <value>
                <fullName>Issue Unresolved</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>