force-app/main/default/objects/Case/fields/CCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CCEmailAddress__c</fullName>
    <description>Used on Case.Email feed actions</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCEmailAddress</label>
    <type>TextArea</type>
</CustomField>