force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>IF(   ISPICKVAL(Origin, &apos;Phone&apos;) &amp;&amp; Source__c == &apos;C2CB&apos;,
      &apos;Phone&apos;,
      IF( ISPICKVAL(Origin, &apos;Gusto&apos;) &amp;&amp; NOT(ISBLANK(Integration_Id__c)) &amp;&amp; ISBLANK(IVR_Routing_Log__c),
      &apos;Email&apos;, 
      IF( First_Level__c = &apos;wallet_chatbot&apos; &amp;&amp; ISPICKVAL(Origin, &apos;Gusto&apos;), &apos;Wallet Chatbot&apos;, 
IF( NOT(ISBLANK(First_Level__c)) &amp;&amp; ISPICKVAL(Origin, &apos;Gusto&apos;), &apos;Chat&apos;,
IF( ISPICKVAL(Origin, &apos;Gusto Wallet&apos;) &amp;&amp; ISBLANK(Integration_Id__c), &apos;Chat&apos;,
IF( ISPICKVAL(Origin, &apos;Gusto Wallet&apos;) &amp;&amp; NOT(ISBLANK(Integration_Id__c)), &apos;Email&apos;,
IF( IVR_Type__c=&apos;Voicemail&apos; &amp;&amp; OR(IVR_Queue_Name__c=&apos;Dedicated TAM&apos;, IVR_Queue_Name__c=&apos;Tax Filing Compliance&apos;, IVR_Queue_Name__c=&apos;Tax Operations&apos;), &apos;Voicemail&apos;,null))) 
))
)
)</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>