force-app/main/default/objects/Case/fields/Closed_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Closed_Owner_Role__c</fullName>
    <description>Populates the role of the owner of the record at the time of closure.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>