force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>Closed Reason</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merged Duplicate</fullName>
            </value>
            <value>
                <fullName>Termination Cancelled</fullName>
            </value>
            <value>
                <fullName>Merged Follow up Case</fullName>
            </value>
            <value>
                <fullName>Abandoned Call</fullName>
            </value>
            <value>
                <fullName>Merged Previously Answered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>