force-app/main/default/objects/Case/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>