force-app/main/default/objects/Case/fields/Complaint_Method__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Method__c</fullName>
    <label>Complaint Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Regulator Website</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Written(mail-email-online form)</fullName>
            </value>
            <value>
                <fullName>Verbal/Phone call/Callcenter</fullName>
            </value>
            <value>
                <fullName>Regulatory Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>