force-app/main/default/objects/Case/fields/Complaint_Topic__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Topic__c</fullName>
    <description>This field describes the topic on which complaint is raised.</description>
    <label>Complaint Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Performance</fullName>
            </value>
            <value>
                <fullName>Policy Violation</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Rude or Unacceptable Behavior</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction Regarding Problem Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>