force-app/main/default/objects/Case/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Threatened Legal Action</fullName>
            </value>
            <value>
                <fullName>Complaint Filed Through Regulatory Agency</fullName>
            </value>
            <value>
                <fullName>Compliance Violation</fullName>
            </value>
            <value>
                <fullName>Customer Indicates Illegal Discrimination</fullName>
            </value>
            <value>
                <fullName>No Complaint</fullName>
            </value>
            <value>
                <fullName>Advertising Issues</fullName>
                <isActive>false</isActive>
                <label>Advertising Issues</label>
            </value>
            <value>
                <fullName>Billing or Collection Issues</fullName>
                <isActive>false</isActive>
                <label>Billing or Collection Issues</label>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
                <isActive>false</isActive>
                <label>Contract Issues</label>
            </value>
            <value>
                <fullName>Customer Service Issues</fullName>
                <isActive>false</isActive>
                <label>Customer Service Issues</label>
            </value>
            <value>
                <fullName>Delivery Issues</fullName>
                <isActive>false</isActive>
                <label>Delivery Issues</label>
            </value>
            <value>
                <fullName>Guarantee or Waranty Issues</fullName>
                <isActive>false</isActive>
                <label>Guarantee or Waranty Issues</label>
            </value>
            <value>
                <fullName>Refund/Exhange Issues</fullName>
                <isActive>false</isActive>
                <label>Refund/Exhange Issues</label>
            </value>
            <value>
                <fullName>Repair Issues</fullName>
                <isActive>false</isActive>
                <label>Repair Issues</label>
            </value>
            <value>
                <fullName>Sales Issues</fullName>
                <isActive>false</isActive>
                <label>Sales Issues</label>
            </value>
            <value>
                <fullName>Service Issues</fullName>
                <isActive>false</isActive>
                <label>Service Issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>