force-app/main/default/objects/Case/fields/Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Score__c</fullName>
    <description>Compliance Score</description>
    <label>Compliance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>