force-app/main/default/objects/Case/fields/Confirm_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Case_Reason__c</fullName>
    <label>Confirm Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>100k Liability</fullName>
            </value>
            <value>
                <fullName>1099 Adjustment</fullName>
            </value>
            <value>
                <fullName>2 Day Bank Balance Response</fullName>
            </value>
            <value>
                <fullName>2 Day Details</fullName>
            </value>
            <value>
                <fullName>2 Day Payroll Blocked</fullName>
                <label>2 Day Payroll Blocked RC</label>
            </value>
            <value>
                <fullName>2 Day Payroll Error</fullName>
            </value>
            <value>
                <fullName>2 Day Re Approval</fullName>
            </value>
            <value>
                <fullName>2 Day Reject Explanation</fullName>
            </value>
            <value>
                <fullName>2 Day RFI Complete Approval Request</fullName>
            </value>
            <value>
                <fullName>2 Day RFI Inquiry</fullName>
            </value>
            <value>
                <fullName>2 Day Suspension Explanation</fullName>
            </value>
            <value>
                <fullName>2 Day to 4 Day</fullName>
            </value>
            <value>
                <fullName>Abandoned/Unresponsive Chat</fullName>
            </value>
            <value>
                <fullName>Account Closed/Inactive</fullName>
            </value>
            <value>
                <fullName>Account ID Update</fullName>
            </value>
            <value>
                <fullName>Account Locked Explanation</fullName>
            </value>
            <value>
                <fullName>Account Rejected</fullName>
            </value>
            <value>
                <fullName>Agency: Correspondence</fullName>
            </value>
            <value>
                <fullName>Agency: Informational</fullName>
            </value>
            <value>
                <fullName>Agency/Gusto relationship</fullName>
            </value>
            <value>
                <fullName>ATO Claim Negative</fullName>
            </value>
            <value>
                <fullName>ATO Claim Positive</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Audit Blocked</fullName>
            </value>
            <value>
                <fullName>Audit Error</fullName>
            </value>
            <value>
                <fullName>Bank Verification</fullName>
            </value>
            <value>
                <fullName>Benefit Adjustment</fullName>
                <label>benefit adjustment</label>
            </value>
            <value>
                <fullName>Benefits Adjustment</fullName>
                <label>benefits adjustment</label>
            </value>
            <value>
                <fullName>Business Name Change Request</fullName>
            </value>
            <value>
                <fullName>Calendly Appointments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>